# robotic-chess-playing-arm

./: .gitignore  CMakeLists.txt  README.md  main  main.c  main.cpp  main.py  requirements.txt
inc/: chess_logic.h  chessboard.h
inc/common/: chess_types.h
inc/engine/: uci_engine.h
inc/game/: chess_state.h  move_validation.h
inc/ui/: board_display.h  console_ui.h
inc/utils/: string_utils.h
inc/vision/: chess_move_detect.h
src/: chess_logic.c  chessboard.c
src/engine/: uci_engine.c
src/game/: chess_state.c  move_validation.c
src/ui/: board_display.c  console_ui.c
src/utils/: string_utils.c
src/vision/: chess_move_detect.cpp
vision_manager/: vision_module.py
